appId: digital-business-cards
---
- launchApp
- tapOn: "Scan"
- assertVisible: "Scan Business Card"
- tapOn: "QR Scanner"
- assertVisible: "We need your permission to show the camera"
