appId: digital-business-cards
---
- launchApp
- tapOn: "Share"
- assertVisible: "Share Your Card"
- assertVisible: "OR"
- assertVisible: "NFC Tap"
